compiler/parser/src/main/antlr/.antlr/OxidizerParser.java
// Generated from c:\Users\fcspa\de\dsos\compiler\parser\src\main\antlr\OxidizerParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OxidizerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_PRIVATE=1, KW_DEF=2, KW_FOR=3, KW_IN=4, KW_WHILE=5, KW_IF=6, KW_ELIF=7, 
		KW_ELSE=8, KW_CLASS=9, KW_IMPORT=10, KW_THEN=11, OP_LSHIFT=12, OP_RSHIFT=13, 
		COMP_EQ=14, COMP_GE=15, COMP_LE=16, COMP_NE=17, COMP_G=18, COMP_L=19, 
		OP_AND=20, OP_OR=21, OP_NOT=22, OP_INC=23, OP_DEC=24, OP_POW=25, OP_PLUS=26, 
		OP_MINUS=27, OP_MUL=28, OP_DIV=29, OP_MOD=30, OP_BAND=31, OP_BOR=32, OP_XOR=33, 
		OP_COMPLEMENT=34, OP_ASSIGN=35, SEMI=36, COLON=37, LPAREN=38, RPAREN=39, 
		LSQUARE=40, RSQUARE=41, COMMA=42, ENTER_STRING=43, LBRACE=44, RBRACE=45, 
		INTEGER=46, NAME=47, WS=48, ENTER_STR_EXPR=49, END_STRING=50, TEXT=51;
	public static final int
		RULE_module = 0, RULE_decl = 1, RULE_block = 2, RULE_stmt = 3, RULE_loop = 4, 
		RULE_branch = 5, RULE_compare_op = 6, RULE_string = 7, RULE_stringPart = 8, 
		RULE_literall = 9, RULE_expr = 10, RULE_comprehension = 11, RULE_ident = 12, 
		RULE_typedecl = 13, RULE_innerclass = 14, RULE_funcdecl = 15, RULE_importdecl = 16;
	public static final String[] ruleNames = {
		"module", "decl", "block", "stmt", "loop", "branch", "compare_op", "string", 
		"stringPart", "literall", "expr", "comprehension", "ident", "typedecl", 
		"innerclass", "funcdecl", "importdecl"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'private'", "'def'", "'for'", "'in'", "'while'", "'if'", "'elif'", 
		"'else'", "'class'", "'import'", "'then'", "'<<'", "'>>'", "'=='", "'>='", 
		"'<='", "'!='", "'>'", "'<'", "'and'", "'or'", "'not'", "'++'", "'--'", 
		"'^^'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'~'", 
		"'='", "';'", "':'", "'('", "')'", "'['", "']'", "','", null, "'{'", "'}'", 
		null, null, null, "'${'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KW_PRIVATE", "KW_DEF", "KW_FOR", "KW_IN", "KW_WHILE", "KW_IF", 
		"KW_ELIF", "KW_ELSE", "KW_CLASS", "KW_IMPORT", "KW_THEN", "OP_LSHIFT", 
		"OP_RSHIFT", "COMP_EQ", "COMP_GE", "COMP_LE", "COMP_NE", "COMP_G", "COMP_L", 
		"OP_AND", "OP_OR", "OP_NOT", "OP_INC", "OP_DEC", "OP_POW", "OP_PLUS", 
		"OP_MINUS", "OP_MUL", "OP_DIV", "OP_MOD", "OP_BAND", "OP_BOR", "OP_XOR", 
		"OP_COMPLEMENT", "OP_ASSIGN", "SEMI", "COLON", "LPAREN", "RPAREN", "LSQUARE", 
		"RSQUARE", "COMMA", "ENTER_STRING", "LBRACE", "RBRACE", "INTEGER", "NAME", 
		"WS", "ENTER_STR_EXPR", "END_STRING", "TEXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OxidizerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OxidizerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModuleContext extends ParserRuleContext {
		public List<ImportdeclContext> importdecl() {
			return getRuleContexts(ImportdeclContext.class);
		}
		public ImportdeclContext importdecl(int i) {
			return getRuleContext(ImportdeclContext.class,i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_IMPORT) {
				{
				{
				setState(34);
				importdecl();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				decl();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_PRIVATE) | (1L << KW_DEF) | (1L << KW_CLASS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public TypedeclContext typedecl() {
			return getRuleContext(TypedeclContext.class,0);
		}
		public FuncdeclContext funcdecl() {
			return getRuleContext(FuncdeclContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				typedecl();
				}
				break;
			case KW_PRIVATE:
			case KW_DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				funcdecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(OxidizerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(OxidizerParser.RBRACE, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(LBRACE);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_FOR) | (1L << KW_WHILE) | (1L << KW_IF) | (1L << OP_NOT) | (1L << OP_MINUS) | (1L << OP_COMPLEMENT) | (1L << LPAREN) | (1L << LSQUARE) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(50);
				stmt();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(OxidizerParser.SEMI, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode OP_ASSIGN() { return getToken(OxidizerParser.OP_ASSIGN, 0); }
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				expr(0);
				setState(59);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				ident();
				setState(62);
				match(OP_ASSIGN);
				setState(63);
				expr(0);
				setState(64);
				match(SEMI);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				loop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				branch();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public TerminalNode KW_FOR() { return getToken(OxidizerParser.KW_FOR, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode KW_IN() { return getToken(OxidizerParser.KW_IN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(OxidizerParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(OxidizerParser.RBRACE, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode KW_WHILE() { return getToken(OxidizerParser.KW_WHILE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_loop);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(KW_FOR);
				setState(71);
				ident();
				setState(72);
				match(KW_IN);
				setState(73);
				expr(0);
				setState(74);
				match(LBRACE);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_FOR) | (1L << KW_WHILE) | (1L << KW_IF) | (1L << OP_NOT) | (1L << OP_MINUS) | (1L << OP_COMPLEMENT) | (1L << LPAREN) | (1L << LSQUARE) | (1L << INTEGER) | (1L << NAME))) != 0)) {
					{
					{
					setState(75);
					stmt();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(RBRACE);
				}
				break;
			case KW_WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(KW_WHILE);
				setState(84);
				expr(0);
				setState(85);
				block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BranchContext extends ParserRuleContext {
		public TerminalNode KW_IF() { return getToken(OxidizerParser.KW_IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> KW_ELIF() { return getTokens(OxidizerParser.KW_ELIF); }
		public TerminalNode KW_ELIF(int i) {
			return getToken(OxidizerParser.KW_ELIF, i);
		}
		public TerminalNode KW_ELSE() { return getToken(OxidizerParser.KW_ELSE, 0); }
		public BranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_branch; }
	}

	public final BranchContext branch() throws RecognitionException {
		BranchContext _localctx = new BranchContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_branch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(KW_IF);
			setState(90);
			expr(0);
			setState(91);
			block();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_ELIF) {
				{
				{
				setState(92);
				match(KW_ELIF);
				setState(93);
				expr(0);
				setState(94);
				block();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_ELSE) {
				{
				setState(101);
				match(KW_ELSE);
				setState(102);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compare_opContext extends ParserRuleContext {
		public TerminalNode COMP_G() { return getToken(OxidizerParser.COMP_G, 0); }
		public TerminalNode COMP_GE() { return getToken(OxidizerParser.COMP_GE, 0); }
		public TerminalNode COMP_L() { return getToken(OxidizerParser.COMP_L, 0); }
		public TerminalNode COMP_LE() { return getToken(OxidizerParser.COMP_LE, 0); }
		public Compare_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compare_op; }
	}

	public final Compare_opContext compare_op() throws RecognitionException {
		Compare_opContext _localctx = new Compare_opContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compare_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMP_GE) | (1L << COMP_LE) | (1L << COMP_G) | (1L << COMP_L))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode ENTER_STRING() { return getToken(OxidizerParser.ENTER_STRING, 0); }
		public TerminalNode END_STRING() { return getToken(OxidizerParser.END_STRING, 0); }
		public List<StringPartContext> stringPart() {
			return getRuleContexts(StringPartContext.class);
		}
		public StringPartContext stringPart(int i) {
			return getRuleContext(StringPartContext.class,i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ENTER_STRING);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENTER_STR_EXPR || _la==TEXT) {
				{
				{
				setState(108);
				stringPart();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(END_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringPartContext extends ParserRuleContext {
		public StringPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringPart; }
	 
		public StringPartContext() { }
		public void copyFrom(StringPartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EmbeddedExprContext extends StringPartContext {
		public TerminalNode ENTER_STR_EXPR() { return getToken(OxidizerParser.ENTER_STR_EXPR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(OxidizerParser.RBRACE, 0); }
		public EmbeddedExprContext(StringPartContext ctx) { copyFrom(ctx); }
	}
	public static class TextContext extends StringPartContext {
		public TerminalNode TEXT() { return getToken(OxidizerParser.TEXT, 0); }
		public TextContext(StringPartContext ctx) { copyFrom(ctx); }
	}

	public final StringPartContext stringPart() throws RecognitionException {
		StringPartContext _localctx = new StringPartContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stringPart);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXT:
				_localctx = new TextContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(TEXT);
				}
				break;
			case ENTER_STR_EXPR:
				_localctx = new EmbeddedExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(ENTER_STR_EXPR);
				setState(118);
				expr(0);
				setState(119);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiterallContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(OxidizerParser.INTEGER, 0); }
		public LiterallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literall; }
	}

	public final LiterallContext literall() throws RecognitionException {
		LiterallContext _localctx = new LiterallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_literall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ShiftContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_LSHIFT() { return getToken(OxidizerParser.OP_LSHIFT, 0); }
		public TerminalNode OP_RSHIFT() { return getToken(OxidizerParser.OP_RSHIFT, 0); }
		public ShiftContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class DecContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode OP_DEC() { return getToken(OxidizerParser.OP_DEC, 0); }
		public DecContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class BorContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_BOR() { return getToken(OxidizerParser.OP_BOR, 0); }
		public BorContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TernaryContext extends ExprContext {
		public TerminalNode KW_IF() { return getToken(OxidizerParser.KW_IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode KW_THEN() { return getToken(OxidizerParser.KW_THEN, 0); }
		public TerminalNode KW_ELSE() { return getToken(OxidizerParser.KW_ELSE, 0); }
		public TernaryContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddSubContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_PLUS() { return getToken(OxidizerParser.OP_PLUS, 0); }
		public TerminalNode OP_MINUS() { return getToken(OxidizerParser.OP_MINUS, 0); }
		public AddSubContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class EQTestContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode COMP_EQ() { return getToken(OxidizerParser.COMP_EQ, 0); }
		public TerminalNode COMP_NE() { return getToken(OxidizerParser.COMP_NE, 0); }
		public EQTestContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class VarContext extends ExprContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public VarContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ParensContext extends ExprContext {
		public TerminalNode LPAREN() { return getToken(OxidizerParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(OxidizerParser.RPAREN, 0); }
		public ParensContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class LAndContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_AND() { return getToken(OxidizerParser.OP_AND, 0); }
		public LAndContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ListCompContext extends ExprContext {
		public ComprehensionContext comprehension() {
			return getRuleContext(ComprehensionContext.class,0);
		}
		public ListCompContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class BAndContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_BAND() { return getToken(OxidizerParser.OP_BAND, 0); }
		public BAndContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class LorContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_OR() { return getToken(OxidizerParser.OP_OR, 0); }
		public LorContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ConcatContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_INC() { return getToken(OxidizerParser.OP_INC, 0); }
		public ConcatContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NegContext extends ExprContext {
		public TerminalNode OP_MINUS() { return getToken(OxidizerParser.OP_MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NegContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NotContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode OP_NOT() { return getToken(OxidizerParser.OP_NOT, 0); }
		public TerminalNode OP_COMPLEMENT() { return getToken(OxidizerParser.OP_COMPLEMENT, 0); }
		public NotContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FunCallContext extends ExprContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(OxidizerParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(OxidizerParser.RPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(OxidizerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OxidizerParser.COMMA, i);
		}
		public FunCallContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class LitContext extends ExprContext {
		public LiterallContext literall() {
			return getRuleContext(LiterallContext.class,0);
		}
		public LitContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class PowContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_POW() { return getToken(OxidizerParser.OP_POW, 0); }
		public PowContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class CompareContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Compare_opContext compare_op() {
			return getRuleContext(Compare_opContext.class,0);
		}
		public CompareContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class XorContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_XOR() { return getToken(OxidizerParser.OP_XOR, 0); }
		public XorContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MulModDivContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_MUL() { return getToken(OxidizerParser.OP_MUL, 0); }
		public TerminalNode OP_DIV() { return getToken(OxidizerParser.OP_DIV, 0); }
		public TerminalNode OP_MOD() { return getToken(OxidizerParser.OP_MOD, 0); }
		public MulModDivContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class IncContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
